Fix padding on mobile screens

--- a/src/components/info/Info.css
+++ b/src/components/info/Info.css
@@ -44,4 +44,9 @@
     text-align: center;
     font-size: 25px;
   }
+
+  .tech {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
 }
